--- a/code/processing/processing.Rmd
+++ b/code/processing/processing.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(message = FALSE,
 
 This script was reformatted from CSE Review - Results.
 
-# 1. Dependencies
+# 1a. Dependencies
 
 ## Packages
 ```{r}
@@ -49,9 +49,9 @@ This code used R version 4.1.3 (2022-03-10)
 #groundhog.library(packages, "2022-03-10")
 ```
 
-# 2. General processing 
+# 1b. General processing 
 
-## Import
+## TO DO: Import (rename raw data)
 ```{r}
 #library("readxl")
 
@@ -70,7 +70,7 @@ Due to exclusion decision during coding phase
 codebook1 <- subset(codebook1, id!=390) 
 ```
 
-# 3. Subsets
+# 1c. Subsets
 
 ## Subset to exclude double IDs
 Subset: exclude double IDs 
@@ -149,7 +149,7 @@ codebook1$sample_size_new[which(codebook1$id == 94)] <- NA
 codebook1$sample_size_new[codebook1$scale_number_new == "61A"] <- 526
 ```
 
-# 4. Prep work for demographics
+# 2. Demographics prep work
 
 ## Sample_age 
 Create a new variable with calculated mean estimations (break everything down to an estimate of the average age)
@@ -179,7 +179,7 @@ codebook1$sample_sex_female[codebook1$scale_number_new == "61A"] <- 61
 codebook1$sample_sex_noresponse[codebook1$scale_number_new == "61A"] <- 1
 ```
 
-# 5. Scale prep work
+# 3. Scale prep work
 RQ 1 variables: scale, reliability, validity, and complete codebook 2
 
 ## Exclude papers from codebook 2 if not self-developed 
@@ -277,7 +277,7 @@ convergent_long_data <- rename(convergent_long_data, convergent_type = before_co
 convergent_long_data_clean <- subset(convergent_long_data, !is.na(convergent_long_data[,4])) #column 4 = convergent description
 ```
 
-# 6. Prep work for network analysis
+# 4. Network analysis prep work
 
 ## Change authors variable
 Change authors variable to display both authors and year in one column
@@ -369,7 +369,7 @@ rownames(authors_long_data) <- c() #delete row names
 authors_long_data
 ```
 
-# 7. SE role prep work
+# 5. SE role prep work
 
 ## Cause variables (original)
 String split into several columns (where you don't know the number of output columns)
@@ -510,8 +510,75 @@ outcome_long_data2
 outcome_long_data_clean2 <- subset(outcome_long_data2, !is.na(outcome_long_data2[,4])) #column 4 
 ```
 
+# 6. Intervention prep work
 
+## Create table
+```{r}
+#make data frame
+id <- single_study$id[single_study$intervention==1]
 
+type <- c("training", "training", "exposure to messages", "training", "awareness campaign", "course", "game", "exposure to messages", "game", "training", "training", "training", "exposure to messages")
+
+method <- c("instructional strategies of component display theory", "cyber security related activity", "government surveillance news", "instructional control elements", "compliance communication", "cyber security related activity; career awareness", "cyber security related activity", "cyber privacy risk awareness", "cyber security related activity", "text and video", "fear appeals", "in-house and third-party video", "privacy control salience")
+
+intervention_data <- as.data.frame(cbind(id, type, method))
+
+#type as factor
+intervention_data$type <- as.factor(intervention_data$type)
+#type levels and frequencies
+table(intervention_data$type)
+```
+
+## Refine table
+```{r}
+#change authors variable
+##combine columns
+codebook1$authors_new <- paste(codebook1$authors, codebook1$year, sep=" (")
+##add last ) to new column
+codebook1$authors_new <- paste0(codebook1$authors_new, ")")
+
+#data frame
+authors <- subset(codebook1$authors_new, codebook1$intervention == 1)
+study_type <- subset(single_study$study_type, single_study$intervention == 1)
+intervention_type <- intervention_data$type
+intervention_method <- intervention_data$method
+sample_size <- subset(codebook1$sample_size_new, codebook1$intervention == 1)
+
+intervention_table_data <- as.data.frame(cbind(authors, intervention_type, intervention_method, study_type, sample_size))
+
+#recode type factors
+##as factor with levels
+intervention_table_data$study_type <- as.factor(intervention_table_data$study_type)
+intervention_table_data$study_type <- recode_factor(intervention_table_data$study_type,
+                                   '0' = "experiment",
+                                   '1' = "quasi-experiment", #1: Amo = 3x repeated measures; McGill = pre-post; Arachchilage = pre-post; Clark = multiple-pre-post
+                                   '2' = "survey",
+                                   '3' = "other")
+
+intervention_table_data$intervention_type <- recode_factor(intervention_table_data$intervention_type,
+                                   '1' = "awareness campaign",
+                                   '2' = "course",
+                                   '3' = "exposure to messages",
+                                   '4' = "game", 
+                                   '5' = "training")
+
+#rename columns
+colnames(intervention_table_data) <- c("Authors", "Intervention Type", "Intervention Method", "Study Type", "Sample Size")
+```
+
+# 7. Smart home prep work
+## Subset for smart homes
+For the differentiation between RQ 1.-3. and 4., we need a subset of data 
+```{r}
+#create subset only with smarthome paper for RQ 4
+codebook1_smarthome <- subset(codebook1, smarthome==1)
+
+#identify all IDs from codebook1_rq5 and safe them to use in following subset function
+smarthome_ids <- codebook1_smarthome$id 
+
+#create subset only with smarthome paper for RQ 5 (%in%: if id is in smarthome_id than include row in subset)
+codebook2_smarthome <- subset(codebook2, id %in% smarthome_ids) 
+```
 
 
 
