--- a/code/analysis/analysis.Rmd
+++ b/code/analysis/analysis.Rmd
@@ -17,53 +17,39 @@ knitr::opts_chunk$set(message=FALSE,
                       cache.lazy=FALSE)
 ```
 
-# 1. Dependencies
+# Notes
+This script was reformatted from CSE Review - Results.
+To run this script, the processing script must be run first.
 
-## Packages
+# 1. Interrater agreement
+Iota coefficient for the inter-rater agreement of multivariate observations
+For nominal variables
 ```{r}
-#create packages vector
-packages <- c("readxl", "psych", "ggplot2", "data.table", "stringr", "data.table", "tidyverse", "dplyr", "tidyr", "qpcR", "hrbrthemes", "imguR", "igraph", "networkD3", "htmlwidgets", "statnet", "jtools", "sna", "apaTables", "Jmisc", "wesanderson", "devtools", "rempsyc", "irr")
-
-#un-comment the following line to install packages
-#install.packages(packages)
-
-#load packages
-for (i in 1:length(packages)){
-  library(packages[i], character.only = T)}
+#library(irr)
+nominal_variables <- list()
+nominal_variables[[1]] <- cbind(iota_outcome_list$rater1,
+                                iota_outcome_list$rater2)
+nominal_variables[[2]] <- cbind(iota_intervention_list$rater1,
+                                iota_intervention_list$rater2)
+nominal_variables[[3]] <- cbind(iota_smarthome_list$rater1, 
+                                iota_smarthome_list$rater2)
+iota(nominal_variables)
 ```
 
-## Reproducibility
-This code used R version 4.1.3 (2022-03-10)
+For interval variables
 ```{r}
-#un-comment the following line to get R version
-#R.version
+interval_variables <- list()
+interval_variables[[1]] <- cbind(iota_sample_size_list$rater1,
+                                 iota_sample_size_list$rater2)
+interval_variables[[2]] <- cbind(iota_reliability_alpha_list$rater1,
+                                 iota_reliability_alpha_list$rater2)
+iota(interval_variables, scaledata = "quantitative")
 
-#un-comment the following lines to set groundhog (i.e., run the code on the same versions as originally)
-##install.packages("groundhog")
-##library("groundhog")
-#groundhog.library(packages, "2022-03-10")
 ```
 
 # 2. Demographics
 
 Variables: publication_type, year, study_type, study_setting, smarthome, sample_size, sample_age, sample_sex, sample_profession, sample_recruitment, sample_country
-
-## Data set
-We are reporting studies (single_study and single_sample) and single_id (records/papers)
-
-Create new variables in excel: sample_size_new, sample_age_new, sample_sex_male, sample_sex_female, sample_sex_nonbinary, sample_sex_noresponse
-```{r}
-#data sets for demographics
-demographics_review <- data.frame(single_id$year, single_id$publication_type)
-
-demographics_sample <- data.frame(codebook1$sample_size_new, codebook1$sample_age_new, 
-                                  codebook1$sample_sex_male, codebook1$sample_sex_female, codebook1$sample_sex_nonbinary, codebook1$sample_sex_noresponse,
-                                  codebook1$sample_profession, codebook1$sample_recruitment, codebook1$sample_country)
-
-demographics_true_sample <- data.frame(single_sample$sample_size_new, single_sample$sample_age_new)
-
-demographics_study <- data.frame(single_study$study_type, single_study$study_setting, single_study$smarthome)
-```
 
 ## Numeric demographics
 year, size, age, sex
@@ -633,7 +619,7 @@ weighted.mean(composite_data$reliability_composite, composite_data$sample_size)
 wtd.sd(composite_data$reliability_composite, composite_data$sample_size)
 ```
 
-## validity construct (discriminant)
+## Validity construct (discriminant)
 How many papers studied discriminant validity and what methods were used?
 
 Create data frame with construct and count/frequency
@@ -658,7 +644,7 @@ write_csv2(discriminant_data,"../results/Counts of All Discriminant Constructs -
 ```
 
 
-## validity construct (convergent)
+## Validity construct (convergent)
 Create data frame with construct and count/frequency
 ```{r}
 #as factor
