updated results fles
updated files due to weirdly misfuntioning code prior to restart of R

--- a/code/analysis/analysis.Rmd
+++ b/code/analysis/analysis.Rmd
@@ -456,9 +456,10 @@ ggsave("../results/Study_Scale_Year_Histogram_dodged.jpg")
 ```
 
 ## Reliability alpha studypaper
+## TO DO: add 12 scales from scale_changes = none
 Create a variable with numerics only, not ">0.7"
 
-Weighted alpha with sample size:
+Create data frame
 ```{r}
 #reliability as numeric
 codebook1$reliability_alpha_studypaper_new <- as.numeric(codebook1$reliability_alpha_studypaper_new)
@@ -466,6 +467,10 @@ codebook1$reliability_alpha_studypaper_new <- as.numeric(codebook1$reliability_a
 #change ID 607 sample_size_new for this computation (to include EG and CG)
 codebook1$sample_size_new[codebook1$id == "607" & codebook1$study_samples == "A"] <- (322+307)
 
+```
+
+Weighted alpha with sample size:
+```{r}
 weighted.mean(codebook1$reliability_alpha_studypaper_new, codebook1$sample_size_new, na.rm = TRUE) #NA values in x (=alpha) stripped before computation
 
 #library(jtools)
@@ -474,6 +479,7 @@ wtd.sd(codebook1$reliability_alpha_studypaper_new, codebook1$sample_size_new)
 #change sample size back
 codebook1$sample_size_new[codebook1$id == "607" & codebook1$study_samples == "A"] <- 322
 ```
+
 
 ## Reliability composite studypaper
 Weighted composite with sample size:
